# giflib

./: .gitignore  CMakeLists.txt
lib/: dgif_lib.c  egif_lib.c  gif_hash.c  gif_hash.h  gif_lib.h
